--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ ul{
 }
 
 .gridcontainer{
-    /*width: 100vh;
-    height: 100vh;*/
+    width: 150vh;
+    height: 100vh;
     display: grid;
     grid-template-columns: 1fr 5fr;
     grid-template-rows: 1fr 5fr;
@@ -19,15 +19,14 @@ ul{
 .sidebar{
     display: flex;
     flex-direction: column;
-    background-color: blue;
+    background-color: #3b82f6;
     color: white;
     gap: 20px;
     grid-area: sidebar;
 }
 
 .sidebar div{
-    display: flex;
-    justify-content:center
+    padding-left: 15%;
 
 }
 
@@ -39,13 +38,37 @@ ul{
 }
 
 .searchbar{
-    display: flex;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 10fr;
+    grid-auto-flow: column;
+    align-items: center;
+    border: 1px solid black;
 }
 
 .buttonbar{
-    display: flex;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-auto-flow: column;
+    gap: 30px;
+    align-items: center;
 }
 
 .contentbar{
     grid-area: content;
+}
+
+.search{
+    padding-left: 0;
+}
+
+.searchfield:focus { 
+    outline: none !important;
+}
+.searchfield{
+    border-radius: 20px;
+    border: 1px solid black;
+}
+.username, .notification{
+    
 }
