--- a/style.css
+++ b/style.css
@@ -76,3 +76,32 @@ ul{
     border:none;
     padding-left: 1%;
 }
+
+.projectbar{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    justify-items: center;
+    gap: 25px;
+    align-items: center;
+}
+
+.card{
+    width: 250px;
+    height: 200px;
+    border: 1px solid black;
+}
+
+.announcementbar{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-auto-flow: row;
+}
+
+.announcements{
+    border: 1px solid black;
+}
+
+.trending{
+    border: 1px solid black;
+}
