--- a/style.css
+++ b/style.css
@@ -5,13 +5,18 @@
 
 ul{
     list-style: none;
+    margin: 15px;
+}
+li{
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .gridcontainer{
     width: 150vh;
     height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 5fr;
     grid-template-areas: "sidebar header" "sidebar content";
 }
@@ -27,17 +32,19 @@ ul{
 
 .sidebar div{
     padding-left: 15%;
+    font-size: 24px;
 
 }
 
 .topbar{
     display: grid;
-    grid-template-rows: 1fr;
+    grid-template-rows: 11fr 9fr;
     grid-auto-flow: row;
     grid-area: header;
 }
 
 .searchbar{
+    padding-left: 5%;
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: 1fr;
@@ -56,12 +63,11 @@ ul{
 .contentbar{
     grid-area: content;
     display: grid;
-    background-color: #D3D3D3;
+    background-color: #e8e7e3;
     grid-template-columns: 7fr 3fr;
 }
 
 .search{
-    padding-left: 0;
     display: flex;
     border-radius: 20px;
     border: 1px solid black;
@@ -72,36 +78,94 @@ ul{
 .searchfield:focus { 
     outline: none !important;
 }
+.search img{
+    padding-left: 2%;
+    height: 25px;
+    width: auto;
+}
+
+.pfp{
+    padding-left: auto;
+    height: 32px;
+    width: auto;
+    border-radius: 50%;
+    justify-self: end;
+}
 .searchfield{
     border:none;
     padding-left: 1%;
 }
-
+button{
+    border: none;
+    border-radius: 100px;
+    background-color: #3b82f6;
+    color: white;
+    height: 40%;
+}
 .projectbar{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     justify-items: center;
-    gap: 25px;
+    gap: 15px;
     align-items: center;
 }
-
+.notification{
+    margin-right: 20px;
+}
 .card{
     width: 250px;
     height: 200px;
-    border: 1px solid black;
+    background-color: white;
+    border-left: 4px solid orange;
+    border-radius: 5px;
+    padding-left: 2%;
+}
+
+.heading{
+    text-align: center;
+    font-size: 19px;
 }
 
 .announcementbar{
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 20px 1fr 1fr;
     grid-auto-flow: row;
+    font-size: 24px;
+    gap: 15px;
 }
 
 .announcements{
-    border: 1px solid black;
+    grid-row: 2 / 3;
+    background-color: white;
+    border-radius: 10px;
+    margin-right: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 30px;
 }
 
 .trending{
     border: 1px solid black;
+    grid-row: 3/4;
+    background-color: white;
+    border-radius: 10px;
+    margin-right: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.trendcard{
+    flex: 1;
+    text-align: center;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+}
+.anncard{
+    font-size: 15px;
+    border-bottom: 1px solid black;    
+    text-align: center;
 }
